# PerfectHash

./: .travis.yml  CMakeLists.txt  CTestConfig.cmake  README.md  appveyor.yml  devtools_test.cmake  run_cpplint.cmake
SimplePerfectHash/: SimplePerfectHash.sln
SimplePerfectHash/SimplePerfectHash/: SPH.h  SUH.h  SimplePerfectHash.vcxproj  SimplePerfectHash.vcxproj.filters  multiply_shift_hash_table.h  perfect_hash_table.h  testmain.cpp
modules/perfect-hash/: CMakeLists.txt  README.md
modules/perfect-hash/benchmark/: CMakeLists.txt  benchmark.cpp
modules/perfect-hash/include/: hash_table.h  multiply_shift_hash_table.h  perfect_hash_table.h  perfect_hash_table_mshift.h  universal_hash_table.h
modules/perfect-hash/src/: hash_table.cpp  multiply_shift_hash_table.cpp  perfect_hash_table.cpp  perfect_hash_table_mshift.cpp  universal_hash_table.cpp
modules/perfect-hash/test/: CMakeLists.txt  test_main.cpp  test_multiply_shift_hash_table.cpp  test_perfect_hash_table.cpp  test_universal_hash_table.cpp
